# AlgoWEB

./: .gitignore  CMakeLists.txt  LICENSE  README.md
paper/: GAUSSIAN_E_02_W_20_D_100_EPS.eps  GAUSSIAN_E_02_W_20_D_10_EPS.eps  GAUSSIAN_E_02_W_80_D_100_EPS.eps  SCALE_FREE_E_02_W_20_D_100_EPS.eps  SCALE_FREE_E_02_W_20_D_10_EPS.eps  SMALL_WORLD_E_02_W_20_D_10_EPS.eps  SMALL_WORLD_E_02_W_80_D_100_EPS.eps  SMALL_WORLD_E_04_W_20_D_10_EPS.eps  UNIFORM_BIG_RUN_EPS.eps  UNIFORM_E_02_W_20_D_10_EPS.eps  docultex.tex  lexample.aux  lexample.tex  lexample.tex.backup  santi-laurentiis_evaluating_sublinear_algorithm.tex  siamltex704.cls
paper/plots/: .directory  bg_err.eps  bg_time.eps  diff_gap.eps  gaussian_03_100_40_rel.eps  gaussian_03_100_40_time.eps  gaussian_03_10_40_rel.eps  gaussian_03_10_40_time.eps  gaussian_03_50_40_rel.eps  gaussian_03_50_40_time.eps  gaussian_04_50_60_rel.eps  gaussian_04_50_60_time.eps  same_gap.eps  scalefree_04_50_60_rel.eps  scalefree_04_50_60_time.eps  smallworld_03_100_40_rel.eps  smallworld_03_100_40_time.eps  smallworld_03_10_40_rel.eps  smallworld_03_10_40_time.eps  smallworld_03_50_40_rel.eps  smallworld_03_50_40_time.eps  smallworld_04_50_60_rel.eps  smallworld_04_50_60_time.eps  uniform_02_50_40_abs.eps  uniform_02_50_40_rel.eps  uniform_02_50_40_time.eps  uniform_03_100_40_rel.eps  uniform_03_100_40_time.eps  uniform_03_100_80_time.eps  uniform_03_10_40_rel.eps  uniform_03_10_40_time.eps  uniform_03_50_40_abs.eps  uniform_03_50_40_rel.eps  uniform_03_50_40_time.eps  uniform_03_50_40_time_kruskal.eps  uniform_049999_50_40_abs.eps  uniform_049999_50_40_rel.eps  uniform_049999_50_40_time.eps  uniform_04_100_60_time.eps  uniform_04_50_20_rel.eps  (+8 more)
src/: AlgoWEB.hpp
src/BFS/: BFS.cpp  BFS.hpp
src/FileIO/: GraphIO.cpp  GraphIO.hpp  GraphMLUtils.cpp  GraphMLUtils.h  GraphMLUtils.hpp
src/Grandom/: GraphGen.cpp  GraphGen.hpp  GraphModel.cpp  GraphModel.hpp
src/MstW/: Crt_MstW.cpp  (+2 more)
(+83 files in other folders)
